2010-05-23  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100520
	  Merge with NetBSD make, pick up
	  o back to using realpath on argv[0] 
	    but only if contains '/' and does not start with '/'.

2010-05-10  Simon J. Gerraty  <sjg@bad.crufty.net>

	* boot-strap: use absolute path for bmake when running tests.

	* Makefile.in (MAKE_VERSION):  bump version to 20100510
	  Merge with NetBSD make, pick up
	  o revert use of realpath on argv[0]
	    too many corner cases.
	  o print MAKE_PRINT_VAR_ON_ERROR before running .ERROR target.

2010-05-05  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100505
	  Merge with NetBSD make, pick up
	  o fix for missed SIGCHLD when compiled with SunPRO
	    actually for bmake, defining FORCE_POSIX_SIGNALS would have
	    done the job.

2010-04-30  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100430
	  Merge with NetBSD make, pick up
	  o fflush stdout before writing to stdout
	
2010-04-23  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100423
	  Merge with NetBSD make, pick up
	  o updated unit tests for Haiku (this time for sure).
	* boot-strap: based on patch from joerg 
	  honor --with-default-sys-path better.
	* boot-strap: remove mention of --with-prefix-sys-path
	
2010-04-22  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100422
	* Merge with NetBSD make, pick up
	  o fix for vfork() on Darwin.
	  o fix for bogus $TMPDIR.
	  o set .MAKE.MODE=compat for -B
	  o set .MAKE.JOBS=max_jobs for -j max_jobs
	  o allow unit-tests to run without any *.mk
	  o unit-tests/modmisc be more conservative in dirs presumed to exist.
	* boot-strap: ignore /usr/share/mk except on NetBSD.
	* unit-tests/Makefile.in: set LANG=C when running unit-tests to
	  ensure sort(1) behaves as expected. 
	