@@ -1,6 +1,10 @@
-# $Id: error,v 1.1.1.1 2010/04/08 17:43:00 sjg Exp $
+# $Id: error,v 1.1.1.2 2010/05/24 23:36:03 sjg Exp $
 
 .info just FYI
 .warning this could be serious
 .error this is fatal
 
+all:
+
+.info.html:
+	@echo this should be ignored
